Update Springboot to 3.2.2 (#789)
- Updated SpringBoot to 3.2.2 to fix CVE-2024-22233
 - Fix springboot autoconfiguration config bug in app starter